[project]
name = "mobile-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansitable==0.11.4",
    "cfgv==3.4.0",
    "colored==2.3.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "distlib==0.4.0",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "identify==2.6.15",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "nodeenv==1.9.1",
    "numpy==1.26.4",
    "packaging==25.0",
    "pgraph-python==0.6.3",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "pre-commit==4.3.0",
    "progress==1.6.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "roboticstoolbox-python==1.1.1",
    "rtb-data==1.0.1",
    "scipy==1.16.2",
    "six==1.17.0",
    "spatialgeometry==1.1.0",
    "spatialmath-python==1.1.14",
    "swift-sim==1.1.0",
    "typing-extensions==4.15.0",
    "virtualenv==20.35.3",
    "websockets==15.0.1",
]
